# Rawkit_Ai

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README.md.bak  rawkit.db  rawkit.db-shm  rawkit.db-wal
bindings/rawkit-wasm/: Cargo.toml
bindings/rawkit-wasm/src/: lib.rs
crates/rawkit-core/: Cargo.toml
crates/rawkit-core/src/: graph.rs  ham.rs  lib.rs  node.rs  storage.rs  value.rs
crates/rawkit-crypto/: Cargo.toml
crates/rawkit-crypto/src/: certificate.rs  encrypt.rs  identity.rs  lib.rs  sign.rs
crates/rawkit-server/: Cargo.toml
crates/rawkit-server/src/: main.rs
crates/rawkit-sync/: Cargo.toml
crates/rawkit-sync/src/: lib.rs  message.rs  peer.rs  transport.rs
crates/rawkit-vectors/: Cargo.toml
crates/rawkit-vectors/src/: embedding.rs  hnsw.rs  index.rs  lib.rs  search.rs
demo/: README.md  app.js  index.html
