[workspace]
resolver = "2"
members = [
    "crates/rawkit-core",
    "crates/rawkit-crypto",
    "crates/rawkit-sync",
    "crates/rawkit-vectors",
    "crates/rawkit-server",
    "bindings/rawkit-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/koba42/rawkit-ai"
description = "Decentralized vector-graph memory for AI agents"

[workspace.dependencies]
rawkit-core = { path = "crates/rawkit-core" }
rawkit-crypto = { path = "crates/rawkit-crypto" }
rawkit-sync = { path = "crates/rawkit-sync" }
rawkit-vectors = { path = "crates/rawkit-vectors" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
