[package]
name = "rawkit-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM bindings for Rawkit"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rawkit-core = { workspace = true, default-features = false }
rawkit-crypto = { workspace = true }
rawkit-vectors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = ["WebSocket", "MessageEvent", "ErrorEvent", "console"]
