[package]
name = "rawkit-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WASM bindings for Rawkit"

# Standalone workspace — prevents feature unification from rawkit-server
# (which enables the sqlite feature on rawkit-core) from bleeding into WASM builds.
[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rawkit-core = { path = "../../crates/rawkit-core", default-features = false }
rawkit-vectors = { path = "../../crates/rawkit-vectors", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1", features = ["v4", "js"] }
rand = { version = "0.8", features = ["getrandom"] }

[dependencies.web-sys]
version = "0.3"
features = ["WebSocket", "MessageEvent", "ErrorEvent", "console"]
