[package]
name = "rawkit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core graph data model, HAM CRDT conflict resolution, and storage engine for Rawkit"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true, optional = true }

[dev-dependencies]
proptest = "1"
tokio = { workspace = true }

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]
