[package]
name = "rawkit-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-chain wallet identity, encryption, and signing for Rawkit"

[dependencies]
rawkit-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
x25519-dalek = { version = "2", features = ["serde", "static_secrets"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true }
hex = "0.4"
