[package]
name = "rawkit-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebSocket peer synchronization protocol for Rawkit"

[dependencies]
rawkit-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
async-trait = "0.1"
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
