[package]
name = "rawkit-vectors"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HNSW vector index and embedding pipeline for Rawkit"

[dependencies]
rawkit-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ordered-float = "4"
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
